--- a/ShogiClock/ShogiClock/UserControls/ClockUserControl.xaml
+++ b/ShogiClock/ShogiClock/UserControls/ClockUserControl.xaml
@@ -8,9 +8,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="800">
     <Grid Height="418" VerticalAlignment="Top">
-        <Label x:Name="firstPlayerLabel" Content="{Binding FirstPlayerText}" HorizontalAlignment="Right" Margin="0,10,583,308" Width="100" Background="#7F964545" MinHeight="100"/>
-        <Label x:Name="secondPlayerLabel" Content="{Binding SecondPlayerText}" HorizontalAlignment="Left" Margin="500,0,0,308" Width="100" Background="#FF52B162" MinHeight="100" Height="100" VerticalAlignment="Bottom"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="325,185,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Label x:Name="firstPlayerLabel" Content="{Binding FirstPlayerText}" HorizontalAlignment="Right" Margin="0,118,643,200" Width="100" Background="#7F964545" MinHeight="100"/>
+        <Label x:Name="secondPlayerLabel" Content="{Binding SecondPlayerText}" HorizontalAlignment="Left" Margin="215,0,0,200" Width="100" Background="#FF52B162" MinHeight="100" Height="100" VerticalAlignment="Bottom"/>
+        <Button x:Name="monitoringButton" Content="監視" HorizontalAlignment="Left" Margin="103,45,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Label Content="URL（.csa）" HorizontalAlignment="Left" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox x:Name="urlTextBox" HorizontalAlignment="Left" Height="30" Margin="103,10,0,0" TextWrapping="Wrap" Text="{Binding UrlText}" VerticalAlignment="Top" Width="687"/>
 
     </Grid>
 
