--- a/ShogiClock/ShogiClock/UserControls/ClockUserControl.xaml
+++ b/ShogiClock/ShogiClock/UserControls/ClockUserControl.xaml
@@ -7,17 +7,19 @@
              xmlns:localVM="clr-namespace:ShogiClock.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="800">
-    <Grid Height="418" VerticalAlignment="Top">
-        <Label x:Name="firstPlayerLabel" Content="{Binding FirstPlayerText}" HorizontalAlignment="Right" Margin="0,118,643,200" Width="100" Background="#7F964545" MinHeight="100"/>
-        <Label x:Name="secondPlayerLabel" Content="{Binding SecondPlayerText}" HorizontalAlignment="Left" Margin="215,0,0,200" Width="100" Background="#FF52B162" MinHeight="100" Height="100" VerticalAlignment="Bottom"/>
-        <Button x:Name="monitoringButton" Content="監視" HorizontalAlignment="Left" Margin="103,45,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Label Content="URL（.csa）" HorizontalAlignment="Left" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="urlTextBox" HorizontalAlignment="Left" Height="30" Margin="103,10,0,0" TextWrapping="Wrap" Text="{Binding UrlText}" VerticalAlignment="Top" Width="687"/>
-        <Label Content="更新間隔（秒）" HorizontalAlignment="Left" Margin="391,47,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="intervalSeconds" HorizontalAlignment="Left" Height="26" Margin="490,47,0,0" TextWrapping="Wrap" Text="{Binding IntervalSeconds}" VerticalAlignment="Top" Width="46" TextAlignment="Right"/>
-        <Label Content="大会" HorizontalAlignment="Left" Margin="193,47,0,0" VerticalAlignment="Top"/>
-        <ComboBox ItemsSource="{Binding Tournament}" HorizontalAlignment="Left" Margin="232,47,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
+    <Grid Height="300" VerticalAlignment="Top">
+        <Label x:Name="firstPlayerLabel" Content="{Binding FirstPlayerText}" HorizontalAlignment="Right" Margin="0,127,628,73" Width="100" MinHeight="100"/>
+        <Label x:Name="secondPlayerLabel" Content="{Binding SecondPlayerText}" HorizontalAlignment="Left" Margin="244,0,0,73" Width="100" MinHeight="100" Height="100" VerticalAlignment="Bottom"/>
+        <Label Content="(1) .csa URL" HorizontalAlignment="Left" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
+        <TextBox x:Name="urlTextBox" HorizontalAlignment="Left" Height="30" Margin="103,10,0,0" TextWrapping="Wrap" Text="{Binding UrlText}" VerticalAlignment="Top" Width="671"/>
+        <Label Content="(3) 更新間隔（秒）" HorizontalAlignment="Left" Margin="308,45,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="intervalSeconds" HorizontalAlignment="Left" Height="26" Margin="424,47,0,0" TextWrapping="Wrap" Text="{Binding IntervalSeconds}" VerticalAlignment="Top" Width="46" TextAlignment="Right"/>
+        <Label Content="(2) 大会" HorizontalAlignment="Left" Margin="103,44,0,0" VerticalAlignment="Top"/>
+        <ComboBox ItemsSource="{Binding Tournament}" HorizontalAlignment="Left" Margin="167,47,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
         </ComboBox>
+        <TextBox IsReadOnly="True" HorizontalAlignment="Left" Height="27" Margin="103,78,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="671"/>
+        <Label x:Name="statusText" Content="状況" HorizontalAlignment="Left" Height="27" Margin="10,78,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="monitorButton" Content="(4) 監視開始" HorizontalAlignment="Left" Margin="501,47,0,0" VerticalAlignment="Top" Width="112" Height="24" Click="MonitorButton_Click"/>
 
     </Grid>
 
