--- a/ShogiClock/ShogiClock/UserControls/ClockUserControl.xaml
+++ b/ShogiClock/ShogiClock/UserControls/ClockUserControl.xaml
@@ -15,7 +15,7 @@
         <Label Content="(3) 更新間隔（秒）" HorizontalAlignment="Left" Margin="308,45,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="intervalSeconds" HorizontalAlignment="Left" Height="26" Margin="424,47,0,0" TextWrapping="Wrap" Text="{Binding IntervalSeconds}" VerticalAlignment="Top" Width="46" TextAlignment="Right"/>
         <Label Content="(2) 大会" HorizontalAlignment="Left" Margin="103,44,0,0" VerticalAlignment="Top"/>
-        <ComboBox ItemsSource="{Binding Tournament}" HorizontalAlignment="Left" Margin="167,47,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
+        <ComboBox x:Name="tournamentComboBox" ItemsSource="{Binding Tournament}" HorizontalAlignment="Left" Margin="167,47,0,0" VerticalAlignment="Top" Width="120" SelectedIndex="0">
         </ComboBox>
         <TextBox IsReadOnly="True" HorizontalAlignment="Left" Height="27" Margin="103,78,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="671"/>
         <Label x:Name="statusText" Content="状況" HorizontalAlignment="Left" Height="27" Margin="10,78,0,0" VerticalAlignment="Top" Width="75"/>
