--- a/ShogiClock/ShogiClock/Views/ClockUserControl.xaml
+++ b/ShogiClock/ShogiClock/Views/ClockUserControl.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="ShogiClock.UserControls.ClockUserControl"
+﻿<UserControl x:Class="ShogiClock.Views.ClockUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ShogiClock.UserControls"
-             xmlns:localVM="clr-namespace:ShogiClock.ViewModels"
+             xmlns:local="clr-namespace:ShogiClock.Views"
+             xmlns:ViewModels="clr-namespace:ShogiClock.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="800">
     <Grid Height="300" VerticalAlignment="Top">
@@ -20,11 +20,12 @@
         <TextBox IsReadOnly="True" HorizontalAlignment="Left" Height="27" Margin="103,78,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="671"/>
         <Label x:Name="statusText" Content="状況" HorizontalAlignment="Left" Height="27" Margin="10,78,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="monitorButton" Content="(4) 監視開始" HorizontalAlignment="Left" Margin="501,47,0,0" VerticalAlignment="Top" Width="112" Height="24" Click="MonitorButton_Click"/>
+        <Button Content="WIP 練習中" HorizontalAlignment="Left" Height="22" Margin="635,47,0,0" VerticalAlignment="Top" Width="84" Command="{Binding Monitoring}" Visibility="Hidden"/>
 
     </Grid>
 
     <!-- ビュー モデルと紐づけます -->
     <UserControl.DataContext>
-        <localVM:ClockViewModel/>
+        <ViewModels:ClockViewModel/>
     </UserControl.DataContext>
 </UserControl>
