--- a/ShogiClock/ShogiClock/Views/ClockUserControl.xaml
+++ b/ShogiClock/ShogiClock/Views/ClockUserControl.xaml
@@ -11,7 +11,7 @@
         <Label x:Name="firstPlayerLabel" Content="{Binding FirstPlayerText}" HorizontalAlignment="Right" Margin="0,127,628,73" Width="100" MinHeight="100"/>
         <Label x:Name="secondPlayerLabel" Content="{Binding SecondPlayerText}" HorizontalAlignment="Left" Margin="244,0,0,73" Width="100" MinHeight="100" Height="100" VerticalAlignment="Bottom"/>
         <Label Content="(1) .csa URL" HorizontalAlignment="Left" Height="30" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <TextBox x:Name="urlTextBox" HorizontalAlignment="Left" Height="30" Margin="103,10,0,0" TextWrapping="Wrap" Text="{Binding UrlText}" VerticalAlignment="Top" Width="671"/>
+        <TextBox x:Name="urlTextBox" HorizontalAlignment="Left" Height="30" Margin="103,10,0,0" TextWrapping="Wrap" Text="{Binding UrlText}" VerticalAlignment="Top" Width="671" IsEnabled="{Binding MonitoringStart.IsEnabled}"/>
         <Label Content="(3) 更新間隔（秒）" HorizontalAlignment="Left" Margin="308,45,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="intervalSeconds" HorizontalAlignment="Left" Height="26" Margin="424,47,0,0" TextWrapping="Wrap" Text="{Binding IntervalSeconds}" VerticalAlignment="Top" Width="46" TextAlignment="Right"/>
         <Label Content="(2) 大会" HorizontalAlignment="Left" Margin="103,44,0,0" VerticalAlignment="Top"/>
@@ -20,7 +20,7 @@
         <TextBox IsReadOnly="True" HorizontalAlignment="Left" Height="27" Margin="103,78,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="671"/>
         <Label x:Name="statusText" Content="状況" HorizontalAlignment="Left" Height="27" Margin="10,78,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="monitorButton" Content="(4) 監視開始" HorizontalAlignment="Left" Margin="501,47,0,0" VerticalAlignment="Top" Width="112" Height="24" Click="MonitorButton_Click"/>
-        <Button Content="WIP 練習中" HorizontalAlignment="Left" Height="22" Margin="635,47,0,0" VerticalAlignment="Top" Width="84" Command="{Binding Monitoring}" Visibility="Hidden"/>
+        <Button Content="WIP 練習中" HorizontalAlignment="Left" Height="22" Margin="635,47,0,0" VerticalAlignment="Top" Width="84" Command="{Binding MonitoringStart}"/>
 
     </Grid>
 
